<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title_2"
        android:text="@string/title_second_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="@dimen/size_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_name_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/space_text"
        android:text="@string/hint_name_one"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/receive_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_text"
        app:layout_constraintBottom_toBottomOf="@+id/title_name_second"
        app:layout_constraintStart_toEndOf="@+id/title_name_second"
        app:layout_constraintTop_toTopOf="@+id/title_name_second" />

    <TextView

        android:id="@+id/title_correo_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_text"
        android:text="@string/hint_correo_one"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/title_name_second"
        app:layout_constraintTop_toBottomOf="@+id/title_name_second" />

    <TextView
        android:id="@+id/receive_correo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_text"
        app:layout_constraintBottom_toBottomOf="@+id/title_correo_second"
        app:layout_constraintStart_toEndOf="@+id/title_correo_second"
        app:layout_constraintTop_toTopOf="@+id/title_correo_second" />

    <TextView
        android:id="@+id/title_telefono_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_text"
        android:text="@string/hint_telefono_one"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/title_correo_second"
        app:layout_constraintTop_toBottomOf="@+id/title_correo_second" />

    <TextView
        android:id="@+id/receive_telefono_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_text"
        app:layout_constraintBottom_toBottomOf="@+id/title_telefono_second"
        app:layout_constraintStart_toEndOf="@+id/title_telefono_second"
        app:layout_constraintTop_toTopOf="@+id/title_telefono_second" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_text"
        android:backgroundTint="@color/button_color"
        android:text="@string/share_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/title_telefono_second" />
</androidx.constraintlayout.widget.ConstraintLayout>